force-app/main/default/objects/fHCM2_Team_Member_c__x/fHCM2_Team_Member_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>workdc_poc_sp</externalDataSource>
    <externalName>fHCM2__Team_Member__c</externalName>
    <label>Team Member</label>
    <pluralLabel>Team Members</pluralLabel>
</CustomObject>