force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Age_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Age_c__c</fullName>
    <externalDeveloperName>fHCM2__Age__c</externalDeveloperName>
    <label>Age</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>