force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Birth_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Birth_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Birth_Date__c</externalDeveloperName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>