force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Business_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Business_c__c</fullName>
    <externalDeveloperName>fHCM2__Business__c</externalDeveloperName>
    <label>Business</label>
    <length>128</length>
    <type>Text</type>
</CustomField>