force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Birthday_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Birthday_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Birthday__c</externalDeveloperName>
    <label>Current Birthday</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>