force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Competency_Assessment_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Competency_Assessment_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Competency_Assessment__c</externalDeveloperName>
    <inlineHelpText>The most recent completed competency assessment</inlineHelpText>
    <label>Current Competency Assessment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>