force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Employment_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Employment_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Employment__c</externalDeveloperName>
    <inlineHelpText>Current active employment record</inlineHelpText>
    <label>Current Employment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>