force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Job_Description_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Job_Description_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Job_Description__c</externalDeveloperName>
    <inlineHelpText>The most recent completed job description</inlineHelpText>
    <label>Current Job Description</label>
    <length>18</length>
    <type>Text</type>
</CustomField>