force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Performance_Review_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Performance_Review_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Performance_Review__c</externalDeveloperName>
    <inlineHelpText>The most recent completed performance review</inlineHelpText>
    <label>Current Performance Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>