force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Current_Talent_Plan_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Current_Talent_Plan_c__c</fullName>
    <externalDeveloperName>fHCM2__Current_Talent_Plan__c</externalDeveloperName>
    <inlineHelpText>The most recent talent plan</inlineHelpText>
    <label>Current Talent Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>