force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Department_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Department_c__c</fullName>
    <externalDeveloperName>fHCM2__Department__c</externalDeveloperName>
    <inlineHelpText>The department that this team member belongs.  This sets the HR Managers and policies that apply to this team member</inlineHelpText>
    <label>Department</label>
    <length>18</length>
    <type>Text</type>
</CustomField>