force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Direct_Reports_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Direct_Reports_c__c</fullName>
    <externalDeveloperName>fHCM2__Direct_Reports__c</externalDeveloperName>
    <inlineHelpText>how many direct reports the team member manages</inlineHelpText>
    <label>Direct Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>