force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Division_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Division_c__c</fullName>
    <externalDeveloperName>fHCM2__Division__c</externalDeveloperName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>