force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Email_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Email_c__c</fullName>
    <externalDeveloperName>fHCM2__Email__c</externalDeveloperName>
    <inlineHelpText>Email address of the team member</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>