force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Employment_Status_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Employment_Status_c__c</fullName>
    <externalDeveloperName>fHCM2__Employment_Status__c</externalDeveloperName>
    <inlineHelpText>Status of employment</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Employee</fullName>
            </value>
            <value>
                <fullName>Temporary Staff</fullName>
            </value>
            <value>
                <fullName>On Leave Paid</fullName>
            </value>
            <value>
                <fullName>On Leave Unpaid</fullName>
            </value>
            <value>
                <fullName>Laid Off</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Pre Boarder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>