force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Fax_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Fax_c__c</fullName>
    <externalDeveloperName>fHCM2__Fax__c</externalDeveloperName>
    <label>Fax</label>
    <length>32</length>
    <type>Text</type>
</CustomField>