force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Federation_Id_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Federation_Id_c__c</fullName>
    <externalDeveloperName>fHCM2__Federation_Id__c</externalDeveloperName>
    <inlineHelpText>Single sign on federation id</inlineHelpText>
    <label>Federation Id</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>