force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_First_Name_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_First_Name_c__c</fullName>
    <externalDeveloperName>fHCM2__First_Name__c</externalDeveloperName>
    <inlineHelpText>First name of this team member</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>