force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Function_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Function_c__c</fullName>
    <externalDeveloperName>fHCM2__Function__c</externalDeveloperName>
    <inlineHelpText>Job function</inlineHelpText>
    <label>Function</label>
    <length>128</length>
    <type>Text</type>
</CustomField>