force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Gender_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Gender_c__c</fullName>
    <externalDeveloperName>fHCM2__Gender__c</externalDeveloperName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>