force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Grade_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Grade_c__c</fullName>
    <externalDeveloperName>fHCM2__Grade__c</externalDeveloperName>
    <inlineHelpText>The grade the team member has in in the organisation</inlineHelpText>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>