force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Has_Left_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Has_Left_c__c</fullName>
    <externalDeveloperName>fHCM2__Has_Left__c</externalDeveloperName>
    <label>Has Left</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>