force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_He_She_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_He_She_c__c</fullName>
    <externalDeveloperName>fHCM2__He_She__c</externalDeveloperName>
    <label>He/She</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>