force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Him_Her_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Him_Her_c__c</fullName>
    <externalDeveloperName>fHCM2__Him_Her__c</externalDeveloperName>
    <label>Him/Her</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>