force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Hire_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Hire_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Hire_Date__c</externalDeveloperName>
    <inlineHelpText>Date of hiring by this company</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>