force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Home_Address_City_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Home_Address_City_c__c</fullName>
    <externalDeveloperName>fHCM2__Home_Address_City__c</externalDeveloperName>
    <label>Home Address City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>