force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Home_Address_Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Home_Address_Postal_Code_c__c</fullName>
    <externalDeveloperName>fHCM2__Home_Address_Postal_Code__c</externalDeveloperName>
    <label>Home Address Zipcode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>