force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Home_Email_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Home_Email_c__c</fullName>
    <externalDeveloperName>fHCM2__Home_Email__c</externalDeveloperName>
    <label>Home Email</label>
    <type>Email</type>
</CustomField>