force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Home_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Home_Phone_c__c</fullName>
    <externalDeveloperName>fHCM2__Home_Phone__c</externalDeveloperName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>