force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Is_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Is_Manager_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Is_Manager__c</externalDeveloperName>
    <inlineHelpText>Is this team member a manager for appraisal purposes</inlineHelpText>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>