force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Is_On_Leave_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Is_On_Leave_c__c</fullName>
    <externalDeveloperName>fHCM2__Is_On_Leave__c</externalDeveloperName>
    <label>Is On Leave</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>