force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Job_Effective_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Job_Effective_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Job_Effective_Date__c</externalDeveloperName>
    <inlineHelpText>Date that the current job/position was started.</inlineHelpText>
    <label>Job Effective Date</label>
    <type>Date</type>
</CustomField>