force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Job_Profile_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Job_Profile_c__c</fullName>
    <externalDeveloperName>fHCM2__Job_Profile__c</externalDeveloperName>
    <inlineHelpText>The job profile that most closely matches the team member&apos;s current position</inlineHelpText>
    <label>Job Profile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>