force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Job_Title_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Job_Title_c__c</fullName>
    <externalDeveloperName>fHCM2__Job_Title__c</externalDeveloperName>
    <inlineHelpText>Job title (on business card)</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>