force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Last_Reset_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Last_Reset_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Last_Reset_Date__c</externalDeveloperName>
    <label>Last Reset Date</label>
    <type>DateTime</type>
</CustomField>