force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Level_Down_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Level_Down_c__c</fullName>
    <externalDeveloperName>fHCM2__Level_Down__c</externalDeveloperName>
    <label>Level Down</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>