force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Location_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Location_c__c</fullName>
    <externalDeveloperName>fHCM2__Location__c</externalDeveloperName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>