force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Manager_c__c</fullName>
    <externalDeveloperName>fHCM2__Manager__c</externalDeveloperName>
    <inlineHelpText>The current primary manager of the team member</inlineHelpText>
    <label>Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>