force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Manager_User_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Manager_User_c__c</fullName>
    <externalDeveloperName>fHCM2__Manager_User__c</externalDeveloperName>
    <label>Manager User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>