force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Managers_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Managers_Manager_c__c</fullName>
    <externalDeveloperName>fHCM2__Managers_Manager__c</externalDeveloperName>
    <inlineHelpText>The manager of the manager</inlineHelpText>
    <label>Two-Up Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>