force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Marital_Status_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Marital_Status_c__c</fullName>
    <externalDeveloperName>fHCM2__Marital_Status__c</externalDeveloperName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Civil Partnership</fullName>
            </value>
            <value>
                <fullName>Cohabitating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>