force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Messaging_Link_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Messaging_Link_c__c</fullName>
    <externalDeveloperName>fHCM2__Messaging_Link__c</externalDeveloperName>
    <inlineHelpText>Link to instant messaging for this person.</inlineHelpText>
    <label>IM</label>
    <type>Url</type>
</CustomField>