force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Mobile_Number_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Mobile_Number_c__c</fullName>
    <externalDeveloperName>fHCM2__Mobile_Number__c</externalDeveloperName>
    <inlineHelpText>Mobile phone number</inlineHelpText>
    <label>Mobile</label>
    <length>32</length>
    <type>Text</type>
</CustomField>