force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Mobility_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Mobility_c__c</fullName>
    <externalDeveloperName>fHCM2__Mobility__c</externalDeveloperName>
    <inlineHelpText>Short statement on potential mobility of the team member if offered alternative positions</inlineHelpText>
    <label>Mobility</label>
    <type>TextArea</type>
</CustomField>