force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Birthday_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Birthday_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Birthday__c</externalDeveloperName>
    <label>Next Birthday</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>