force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Competency_Assessment_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Competency_Assessment_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Competency_Assessment_Date__c</externalDeveloperName>
    <inlineHelpText>Date of next competency assessment</inlineHelpText>
    <label>Next Competency Assessment Date</label>
    <type>Date</type>
</CustomField>