force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Development_Needs_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Development_Needs_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Development_Needs_Date__c</externalDeveloperName>
    <inlineHelpText>Date of next check of development needs</inlineHelpText>
    <label>Next Development Needs Date</label>
    <type>Date</type>
</CustomField>