force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Job_Description_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Job_Description_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Job_Description_Date__c</externalDeveloperName>
    <inlineHelpText>Date of next job description review/check</inlineHelpText>
    <label>Next Job Description Date</label>
    <type>Date</type>
</CustomField>