force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Metrics_Review_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Metrics_Review_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Metrics_Review_Date__c</externalDeveloperName>
    <label>Next Metrics Review Date</label>
    <type>Date</type>
</CustomField>