force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Performance_Review_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Performance_Review_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Performance_Review_Date__c</externalDeveloperName>
    <inlineHelpText>Date of next performance review</inlineHelpText>
    <label>Next Performance Review Date</label>
    <type>Date</type>
</CustomField>