force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Next_Talent_Plan_Date_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Next_Talent_Plan_Date_c__c</fullName>
    <externalDeveloperName>fHCM2__Next_Talent_Plan_Date__c</externalDeveloperName>
    <inlineHelpText>Date for next check of talent plan</inlineHelpText>
    <label>Next Talent Plan Date</label>
    <type>Date</type>
</CustomField>