force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Personal_Mobile_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Personal_Mobile_c__c</fullName>
    <externalDeveloperName>fHCM2__Personal_Mobile__c</externalDeveloperName>
    <label>Personal Mobile</label>
    <type>Phone</type>
</CustomField>