force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Personnel_Number_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Personnel_Number_c__c</fullName>
    <externalDeveloperName>fHCM2__Personnel_Number__c</externalDeveloperName>
    <inlineHelpText>The employee personnel/payroll number.  This may change and does not need to be unique.</inlineHelpText>
    <label>Personnel Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>