force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Phone_Extension_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Phone_Extension_c__c</fullName>
    <externalDeveloperName>fHCM2__Phone_Extension__c</externalDeveloperName>
    <label>Extension</label>
    <length>8</length>
    <type>Text</type>
</CustomField>