force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Phone_Number_c__c</fullName>
    <externalDeveloperName>fHCM2__Phone_Number__c</externalDeveloperName>
    <inlineHelpText>Direct-dial phone number</inlineHelpText>
    <label>Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>