force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Picture_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Picture_c__c</fullName>
    <externalDeveloperName>fHCM2__Picture__c</externalDeveloperName>
    <label>Picture</label>
    <length>16</length>
    <type>Text</type>
</CustomField>