force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Picture_File_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Picture_File_c__c</fullName>
    <externalDeveloperName>fHCM2__Picture_File__c</externalDeveloperName>
    <label>Picture File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>