force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Picture_URL_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Picture_URL_c__c</fullName>
    <externalDeveloperName>fHCM2__Picture_URL__c</externalDeveloperName>
    <label>Picture URL</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>