force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Policy_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Policy_c__c</fullName>
    <externalDeveloperName>fHCM2__Policy__c</externalDeveloperName>
    <label>Policy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>