force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Pre_Boarder_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Pre_Boarder_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Pre_Boarder__c</externalDeveloperName>
    <label>Pre Boarder</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>