force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Preferred_Name_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Preferred_Name_c__c</fullName>
    <externalDeveloperName>fHCM2__Preferred_Name__c</externalDeveloperName>
    <label>Preferred Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>