force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Receive_Actions_Digest_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Receive_Actions_Digest_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Receive_Actions_Digest__c</externalDeveloperName>
    <label>Receive Actions Digest</label>
    <type>Checkbox</type>
</CustomField>