force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Report_Line_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Report_Line_c__c</fullName>
    <externalDeveloperName>fHCM2__Report_Line__c</externalDeveloperName>
    <label>Report Line</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>