force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Salesforce_Access_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Salesforce_Access_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Salesforce_Access__c</externalDeveloperName>
    <inlineHelpText>Permit access to Salesforce on top menu</inlineHelpText>
    <label>Salesforce Access</label>
    <type>Checkbox</type>
</CustomField>